gcc-14.2.0/gcc/testsuite/gdc.test/fail_compilation/fail18970.d
version https://git-lfs.github.com/spec/v1
oid sha256:4818162a2888294f48dd90a414e49b03b01ce89c25b1a7e248a026e2a0a00cd2
size 1002
